--- a/gpunit/basic_test.yml
+++ b/gpunit/basic_test.yml
@@ -11,6 +11,8 @@ name: "Seurat.Preprocessing - Basic test"
 module: Seurat.Preprocessing
 params:
     tenx_data_dir: "https://s3-us-west-2.amazonaws.com/10x.files/samples/cell/pbmc3k/pbmc3k_filtered_gene_bc_matrices.tar.gz"
+    column_name: "percent.mt"
+    pattern: "MT-"
 assertions:
     jobStatus: success
     numFiles: 4
